ChatService test 오류 수정